修改css header 修改html

--- a/19_notice_lp.html
+++ b/19_notice_lp.html
@@ -11,239 +11,114 @@
 
 <body>
   <header class="">
-    <div class="header-bg">
+    <div class="header-bg pb-4">
       <h1 class="container d-flex align-items-center">
         <img src="img/Ministry-of-the-Interior-logo-sm.png" alt="">
         <div class="nav-logo text-primary">
           全國性內政財團法人資料上網登錄系統
         </div>
       </h1>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 pt-1 pb-1">
-            <div class="login-tag ">
-              <a href="" class="mr-2">使用者登出 /</a>
-              <a href="" class="mr-2">修改密碼 /</a>
-            </div>
-            <div class="login-status ">
-              <span class="mr-2">
-                使用者 : 王小明
-              </span>
-              <span class="mr-2">
-                登入時間 : 2018/11/24 11:51:26
-              </span>
-              <span class="mr-2">
-                登出倒數 : 19分20秒
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </header>
-  <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light justify-content-center primary-nav mb-2">
-    <div class="container ">
-      <div class="phone-title">
-        <img src="img/Ministry-of-the-Interior-logo-sm.png" alt="">
-        <div class="nav-logo text-primary">
-          全國性內政財團法人資料上網登錄系統
-        </div>
-      </div>
-      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
-      <ul class="navbar-nav primary-navbar-nav">
-        <li class="nav-item ">
-          <a class="nav-link text-primary" href="#">優先處理事項</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">工作計畫及經費預算備查申請及查詢</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">工作報告及財務報表備查申請及查詢</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">接受補助、捐贈名單清冊備查申請及查詢</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">支付獎助、捐贈名單清冊備查申請及查詢</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link text-primary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          帳號維護
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">修改密碼</a>
-          <a class="dropdown-item" href="#">基本資料維護</a>
-        </div>
-      </li>
-      <li class="nav-item phone-login">
-        <div class="login-tag ">
-          <a href="" class="mr-2">使用者登出 /</a>
-          <a href="" class="mr-2">修改密碼 /</a>
-        </div>
-        <div class="login-status ">
-          <span class="mr-2">
-            使用者 : 王小明
-          </span>
-          <span class="mr-2">
-            登入時間 : 2018/11/24 11:51:26
-          </span>
-          <span class="span-block"></span>
-          <span class="mr-2">
-            登出倒數 : 19分20秒
-          </span>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
-</nav>
 
-<div class="container ">
-  <div class=" pt-3 pb-5">
-    <h2 class="title text-primary pt-3">工作計畫及經費預算備查申請及查詢</h2>
-    <div class="row pb-4 pt-4">
-      <div class="col-12">
-        <ul class="nav nav-pills nav-fill nav-tag-btn mb-3 mt-2 ">
-          <li class="nav-item">
-            <a class="nav-link " href="#">公益資訊平台公告</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="#">行政公告</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-12">
-        <div class="card shadow-sm ">
-          <div class="card-body card-table">
-            <div class="list">
-              <ul>
-                <li>
-                  <a href="#">
-                    <span class="num">1</span> 颱風逼近軍民齊心加強防颱戒備<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">2</span> 東坑微電網示範將到期縣府盼由台電承接<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">3</span> 公務員高普考10日登場縣府謹慎試務<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">4</span> 縣長﹕導引正向能量提升教育競爭力<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">5</span> 颱風逼近軍民齊心加強防颱戒備<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">6</span>立法院三讀通過「國軍退除役官兵輔導條例」第3條之1、第33條、第34條修正案<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">7</span> 國軍退除役官兵年終慰問金發放說明<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">8</span> 因應募兵制推動輔導會就業處積極為榮民（眷）與退役官士兵就學、職訓、就業輔導服務升級<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">9</span> 輔導會各榮院全力投入「二O六大地震」救災<time>2018-03-09</time>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <span class="num">10</span> 退除役官兵申請就學獎助學金自二月一日起開始受理<time>2018-03-09</time>
-                  </a>
-                </li>
-              </ul>
+  <div class="container ">
+    <div class="pt-3 pb-5">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">首頁</a></li>
+          <li class="breadcrumb-item active" aria-current="page">最新公告</li>
+        </ol>
+      </nav>
+      <h2 class="title text-primary pt-3">最新公告</h2>
+      <div class="row pb-4 pt-4">
+        <div class="col-12">
+          <div class="card shadow-sm ">
+            <div class="card-body card-table">
+              <div class="list">
+                <ul>
+                  <li>
+                    <a href="#">
+                      <span class="num">1</span> 財團法人臺灣營建研究院107年度工作計畫與經費預算<time>2018-03-09</time>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <span class="num">2</span> 財團法人臺灣建築中心查核報告<time>2018-03-09</time>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
-        </div>   
-        <nav aria-label="Page navigation" class="mt-4 mb-4">
-          <div class="page-text mb-3 text-primary">第1/10頁 共1111筆</div>
-          <ul class="pagination justify-content-center">
-            <li class="page-item">
-              <a class="page-link" href="#">上一頁</a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item page-btn"><a class="page-link" href="#">4</a></li>
-            <li class="page-item page-btn"><a class="page-link" href="#">5</a></li>
-            <li class="page-item page-btn"><a class="page-link" href="#">6</a></li>
-            <li class="page-item page-btn"><a class="page-link" href="#">7</a></li>
-            <li class="page-item page-btn"><a class="page-link" href="#">8</a></li>
-            <li class="page-item page-btn"><a class="page-link" href="#">9</a></li>
-            <li class="page-item page-btn"><a class="page-link" href="#">10</a></li>
-            <li class="page-item">
-              <a class="page-link" href="#">下一頁</a>
-            </li>
-          </ul>
-        </nav>    
+          </div>   
+          <nav aria-label="Page navigation" class="mt-4 mb-4">
+            <div class="page-text mb-3 text-primary">第1/10頁 共1111筆</div>
+            <ul class="pagination justify-content-center">
+              <li class="page-item">
+                <a class="page-link" href="#">上一頁</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item page-btn"><a class="page-link" href="#">4</a></li>
+              <li class="page-item page-btn"><a class="page-link" href="#">5</a></li>
+              <li class="page-item page-btn"><a class="page-link" href="#">6</a></li>
+              <li class="page-item page-btn"><a class="page-link" href="#">7</a></li>
+              <li class="page-item page-btn"><a class="page-link" href="#">8</a></li>
+              <li class="page-item page-btn"><a class="page-link" href="#">9</a></li>
+              <li class="page-item page-btn"><a class="page-link" href="#">10</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#">下一頁</a>
+              </li>
+            </ul>
+          </nav>    
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <!-- modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content shadow-sm ">
-        <div class="modal-header bg-primary ">
-          <div class="modal-title text-white " id="exampleModalLabel">備查申請案件撤銷理由說明</div>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true" class="text-light">&times;</span>
-          </button>
-        </div>
-        <form>
-          <div class="modal-body">
-            <div class="form-group">
-              <textarea rows="8" cols="50" class="form-control" id="message-text"></textarea>
+      <div class="modal-dialog">
+        <div class="modal-content shadow-sm ">
+          <div class="modal-header bg-primary ">
+            <div class="modal-title text-white " id="exampleModalLabel">備查申請案件撤銷理由說明</div>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true" class="text-light">&times;</span>
+            </button>
+          </div>
+          <form>
+            <div class="modal-body">
+              <div class="form-group">
+                <textarea rows="8" cols="50" class="form-control" id="message-text"></textarea>
+              </div>
+              <span class="text-danger">
+                說明 :
+                輸入說明內容字數限制200中、英文字
+              </span>
             </div>
-            <span class="text-danger">
-              說明 :
-              輸入說明內容字數限制200中、英文字
-            </span>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-            <button type="button" class="btn btn-primary">確定</button>
-          </div>
-        </form>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
+              <button type="button" class="btn btn-primary">確定</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<footer class="bg-primary footer-bg p-4 ">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5 mr-auto text-light mb-2">
-      網站安全政策 隱私權保護政策</br>
-    地址 : 10055臺北市中正區徐州路5號7樓</br>
-    內政服務熱線 : 1996
+  <footer class="bg-primary footer-bg p-4 ">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5 mr-auto text-light mb-2">
+        網站安全政策 隱私權保護政策</br>
+      地址 : 10055臺北市中正區徐州路5號7樓</br>
+      內政服務熱線 : 1996
+    </div>
+    <div class="col-md-2">
+      <img src="img/accessibility.jpg" class="img-fluid" alt="Responsive image">
+    </div>
   </div>
-  <div class="col-md-2">
-    <img src="img/accessibility.jpg" class="img-fluid" alt="Responsive image">
-  </div>
-</div>
 </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
