--- a/21_notice_cp2.html
+++ b/21_notice_cp2.html
@@ -11,182 +11,108 @@
 
 <body>
   <header class="">
-    <div class="header-bg">
+    <div class="header-bg pb-4">
       <h1 class="container d-flex align-items-center">
         <img src="img/Ministry-of-the-Interior-logo-sm.png" alt="">
         <div class="nav-logo text-primary">
           全國性內政財團法人資料上網登錄系統
         </div>
       </h1>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 pt-1 pb-1">
-            <div class="login-tag ">
-              <a href="" class="mr-2">使用者登出 /</a>
-              <a href="" class="mr-2">修改密碼 /</a>
-            </div>
-            <div class="login-status ">
-              <span class="mr-2">
-                使用者 : 王小明
-              </span>
-              <span class="mr-2">
-                登入時間 : 2018/11/24 11:51:26
-              </span>
-              <span class="mr-2">
-                登出倒數 : 19分20秒
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </header>
-  <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light justify-content-center primary-nav mb-2">
-    <div class="container ">
-      <div class="phone-title">
-        <img src="img/Ministry-of-the-Interior-logo-sm.png" alt="">
-        <div class="nav-logo text-primary">
-          全國性內政財團法人資料上網登錄系統
-        </div>
-      </div>
-      <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse " id="navbarSupportedContent">
-      <ul class="navbar-nav primary-navbar-nav">
-        <li class="nav-item ">
-          <a class="nav-link text-primary" href="#">優先處理事項</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">工作計畫及經費預算備查申請及查詢</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">工作報告及財務報表備查申請及查詢</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">接受補助、捐贈名單清冊備查申請及查詢</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-primary" href="#">支付獎助、捐贈名單清冊備查申請及查詢</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link text-primary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          帳號維護
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">修改密碼</a>
-          <a class="dropdown-item" href="#">基本資料維護</a>
-        </div>
-      </li>
-      <li class="nav-item phone-login">
-        <div class="login-tag ">
-          <a href="" class="mr-2">使用者登出 /</a>
-          <a href="" class="mr-2">修改密碼 /</a>
-        </div>
-        <div class="login-status ">
-          <span class="mr-2">
-            使用者 : 王小明
-          </span>
-          <span class="mr-2">
-            登入時間 : 2018/11/24 11:51:26
-          </span>
-          <span class="span-block"></span>
-          <span class="mr-2">
-            登出倒數 : 19分20秒
-          </span>
-        </div>
-      </li>
-    </ul>
-  </div>
-</div>
-</nav>
 
-<div class="container ">
-  <div class=" pt-3 pb-5">
-    <h2 class="title text-primary pt-3">公告內容</h2>
-    <div class="row pb-4 pt-4">
-      <div class="col-12">
-        <div class="card shadow-sm ">
-          <div class="card-body card-table">
-            <table class="table-style">
-              <tbody class="">
-                <tr class="row">
-                  <th for="" class="col-sm-3 table-title pb-3 pt-3 ">
-                    公告標題
-                  </th>
-                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
-                    <span>財團法人臺灣建築中心查核報告</span>
-                  </td>
-                </tr>
-                <tr class="row">
-                  <th class="col-sm-3 table-title pb-3 pt-3 ">
-                    公告日期
-                  </th>
-                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
-                    107年1月25日
-                  </td>
-                </tr>
-                <tr class="row">
-                  <th class="col-sm-3 table-title pb-3 pt-3 ">
-                    公告內容
-                  </th>
-                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
-                    查核報告
-                  </td>
-                </tr>
-                <tr class="row">
-                  <th class="col-sm-3 table-title pb-3 pt-3 ">
-                    公告單位
-                  </th>
-                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
-                    財團法人臺灣營建研究院
-                  </td>
-                </tr>
-                <tr class="row">
-                  <th class="col-sm-3 table-title pb-3 pt-3 ">
-                    公告範圍 
-                  </th>
-                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
-                    行政公告
-                  </td>
-                </tr>
-                <tr class="row">
-                  <th class="col-sm-3 table-title pb-3 pt-3 ">
-                    公告附件（查核報告）
-                  </th>
-                  <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
-                    <ul>
-                      <li><a href="">107年查核報告1.pdf</a></li>
-                      <li><a href="">107年查核報告2.pdf</a></li>
-                      <li><a href="">107年查核報告3.pdf</a></li>
-                    </ul>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+  <div class="container ">
+    <div class="pt-3 pb-5">
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item"><a href="#">首頁</a></li>
+          <li class="breadcrumb-item"><a href="#">最新公告</a></li>
+          <li class="breadcrumb-item active" aria-current="page">財團法人臺灣建築中心查核報告</li>
+        </ol>
+      </nav>
+      <h2 class="title text-primary pt-3">公告內容</h2>
+      <div class="row pb-4 pt-4">
+        <div class="col-12">
+          <div class="card shadow-sm ">
+            <div class="card-body card-table">
+              <table class="table-style">
+                <tbody class="">
+                  <tr class="row">
+                    <th for="" class="col-sm-3 table-title pb-3 pt-3 ">
+                      公告標題
+                    </th>
+                    <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                      <span>財團法人臺灣建築中心查核報告</span>
+                    </td>
+                  </tr>
+                  <tr class="row">
+                    <th class="col-sm-3 table-title pb-3 pt-3 ">
+                      公告日期
+                    </th>
+                    <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                      107年1月25日
+                    </td>
+                  </tr>
+                  <tr class="row">
+                    <th class="col-sm-3 table-title pb-3 pt-3 ">
+                      公告內容
+                    </th>
+                    <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                      查核報告
+                    </td>
+                  </tr>
+                  <tr class="row">
+                    <th class="col-sm-3 table-title pb-3 pt-3 ">
+                      公告單位
+                    </th>
+                    <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                      財團法人臺灣營建研究院
+                    </td>
+                  </tr>
+                  <tr class="row">
+                    <th class="col-sm-3 table-title pb-3 pt-3 ">
+                      公告範圍 
+                    </th>
+                    <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                      行政公告
+                    </td>
+                  </tr>
+                  <tr class="row">
+                    <th class="col-sm-3 table-title pb-3 pt-3 ">
+                      公告附件（查核報告）
+                    </th>
+                    <td class="col-sm-9 d-flex align-items-center pb-3 pt-3 ">
+                      <ul>
+                        <li><a href="">107年查核報告1.pdf</a></li>
+                        <li><a href="">107年查核報告2.pdf</a></li>
+                        <li><a href="">107年查核報告3.pdf</a></li>
+                      </ul>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="d-flex justify-content-center mb-4">
-      <a href="#" class="btn btn-secondary list-btn">回上一頁</a>
+      <div class="d-flex justify-content-center mb-4">
+        <a href="#" class="btn btn-secondary list-btn">回上一頁</a>
+      </div>
     </div>
   </div>
-</div>
 
-<footer class="bg-primary footer-bg p-4 ">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-5 mr-auto text-light mb-2">
-      網站安全政策 隱私權保護政策</br>
-    地址 : 10055臺北市中正區徐州路5號7樓</br>
-    內政服務熱線 : 1996
+  <footer class="bg-primary footer-bg p-4 ">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5 mr-auto text-light mb-2">
+        網站安全政策 隱私權保護政策</br>
+      地址 : 10055臺北市中正區徐州路5號7樓</br>
+      內政服務熱線 : 1996
+    </div>
+    <div class="col-md-2">
+      <img src="img/accessibility.jpg" class="img-fluid" alt="Responsive image">
+    </div>
   </div>
-  <div class="col-md-2">
-    <img src="img/accessibility.jpg" class="img-fluid" alt="Responsive image">
-  </div>
-</div>
 </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
